2014-08-18  James Pallister  <james.pallister@embecosm.com>

	* goal.def: To keep compatability don't generate any constants 
		larger than 32-bits.

2014-08-17  James Pallister  <james.pallister@embecosm.com>

	* goal.def: Some of the goals use the 0x80000000 constant. These are
		changed to be 0x80 when the bit width of the target is 8-bits,
		for example.

2014-08-17  James Pallister  <james.pallister@embecosm.com>

	* All files: Add AVR support. Support for the add, sub, inc, cmp, xor,
		or, and, mov instruction.

2014-08-17  James Pallister  <james.pallister@embecosm.com>

	* All files: Fix white space. All tabs converted to whitespace

2010-18-07  Richard Osborne  <richard@xmos.com>

	* superopt.h: Fix incorrect use of unsigned_word type in PERFORM_SEXT macro

2009-28-08  Richard Osborne  <richard@xmos.com>

	* superopt.c: Fix printing of ldaw / lda16.
	* superopt.h: Fix error in the PERFORM macros for ldaw / lda16.

2009-07-08  Richard Osborne  <richard@xmos.com>

	* All files: Add XCore support

Sat Jun  3 01:28:17 1995  Torbjorn Granlund  <tege@matematik.su.se>

	* superopt.c (random_word): Delete unused variable tot_bits.

Thu Jun  1 04:05:25 1995  Torbjorn Granlund  <tege@matematik.su.se>

	* superopt.c (init_random_word): Make state1 have char type.
	Use random() on alpha, since srand48 doesn't work there.

Wed May 31 17:08:12 1995  Torbjorn Granlund  <tege@matematik.su.se>

	* superopt.c (test_operands): Add -3, -2, 3, 30, 31, 32, 63, 64.
	(random_word): Return small numbers with high probability.

Sat May 27 18:32:03 1995  Torbjorn Granlund  <tege@matematik.su.se>

	* superopt.c (N_RANDOM_TEST_OPERANDS): Set to 25000.
	(random_word): Rewrite.
	(RANDOM): New macro, internal to random_word.

	* goal.def (DBL_SHIFT_LO, DBL_SHIFT_LO_TRUNC): Arity is 2.

Wed May 24 07:40:49 1995  Torbjorn Granlund  <tege@phydeaux.cygnus.com>

	* superopt.c (N_RANDOM_TEST_OPERANDS): New macro.
	(init_test_sets): Use N_RANDOM_TEST_OPERANDS.